Now 4 pieces of content can be shown on-screen at once.

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -7,6 +7,13 @@
 	</head>
 
 	<body>
-		<div id="media"></div>
+		<div id="media">
+			<div id="topleft"></div>
+			<div id="topright"></div>
+			<div id="btmleft"></div>
+			<div id="btmright"></div>
+		</div>
+
+		<div id="password"></div>
 	</body>
 </html>
