--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -4,6 +4,7 @@
 	 	<script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
 	 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="receiver.js"></script>
+		<link   rel="stylesheet" type="text/css" href="receiver.css">
 	</head>
 
 	<body>
