--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -9,10 +9,10 @@
 
 	<body>
 		<div id="media">
-			<div id="topleft"></div>
-			<div id="topright"></div>
-			<div id="btmleft"></div>
-			<div id="btmright"></div>
+			<div class="corner" id="topleft"></div>
+			<div class="corner" id="topright"></div>
+			<div class="corner" id="btmleft"></div>
+			<div class="corner" id="btmright"></div>
 		</div>
 
 		<div id="password"></div>
