Dynamic cell count

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -8,13 +8,7 @@
 	</head>
 
 	<body>
-		<div id="media">
-			<div class="corner" id="topleft"></div>
-			<div class="corner" id="topright"></div>
-			<div class="corner" id="btmleft"></div>
-			<div class="corner" id="btmright"></div>
-		</div>
-
+		<div id="media"></div>
 		<div id="password"></div>
 	</body>
 </html>
