title and password can now be displayed on screen

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -8,7 +8,8 @@
 	</head>
 
 	<body>
+		<div><h1 id="title"></h1></div>
+		<div><h1 id="password"></h1></div>
 		<div id="media"></div>
-		<div id="password"></div>
 	</body>
 </html>
