--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -8,8 +8,7 @@
 	</head>
 
 	<body>
-		<div><h1 id="title"></h1></div>
-		<div><h1 id="password"></h1></div>
+		<div><h1 id="title"></h1><h1 id="password"></h1></div>
 		<div id="media"></div>
 	</body>
 </html>
