updated title and password

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -7,8 +7,12 @@
 		<link   rel="stylesheet" type="text/css" href="receiver.css">
 	</head>
 
-	<body>
-		<div><h1 id="title"></h1><h1 id="password"></h1></div>
+	<body style="background-color: black">
+		<div id="info">
+			<span id="title"></span>
+			<span id="password"></span>
+		</div>
 		<div id="media"></div>
+
 	</body>
 </html>
