Minor HTML changes

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Test</title>
+		<title>getchipmunk.io!</title>
 	 	<script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
 	 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="receiver.js"></script>
@@ -10,9 +10,12 @@
 	<body style="background-color: black">
 		<div id="info">
 			<span id="title"></span>
+			<span>🐿</span>
 			<span id="password"></span>
 		</div>
-		<div id="media"></div>
+		<div id="media">
+		
+		</div>
 
 	</body>
 </html>
