More Chromecast UI changes.

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -10,7 +10,7 @@
 	<body style="background-color: black">
 		<div id="info">
 			<span id="title"></span>
-			<span>🐿</span>
+			<span>Chipmunk!</span>
 			<span id="password"></span>
 		</div>
 		<div id="media">
