More style changes

--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -7,11 +7,12 @@
 		<link   rel="stylesheet" type="text/css" href="receiver.css">
 	</head>
 
-	<body style="background-color: black">
+	<body style="background-color: black;">
 		<div id="info">
-			<span id="title"></span>
-			<span>Chipmunk!</span>
-			<span id="password"></span>
+			<img id="logo" src="http://www.iconsdb.com/icons/preview/white/twitter-xxl.png">
+		
+			<span id="title">helo</span>
+			<span id="password">wurl</span>
 		</div>
 		<div id="media">
 		
