--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>getchipmunk.io!</title>
+		<title>Get Chipmunk!</title>
 	 	<script src="//www.gstatic.com/cast/sdk/libs/receiver/2.0.0/cast_receiver.js"></script>
 	 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="receiver.js"></script>
@@ -9,14 +9,15 @@
 
 	<body style="background-color: black;">
 		<div id="info">
-			<img id="logo" src="http://www.iconsdb.com/icons/preview/white/twitter-xxl.png">
-		
-			<span id="title">helo</span>
-			<span id="password">wurl</span>
+			<img id="logo" src="sr-chips-a-lot.png">
+
+			<span id="title"></span>
+			<span id="password"></span>
 		</div>
 		<div id="media">
 		
 		</div>
 
+		<div id="footer">Made with &lt;3 in Ottawa</div> 
 	</body>
 </html>
