--- a/chromecast/index.html
+++ b/chromecast/index.html
@@ -18,6 +18,6 @@
 		
 		</div>
 
-		<div id="footer">Made with &lt;3 in Ottawa</div> 
+		<div id="footer">Made in Ottawaw ith &lt;3</div> 
 	</body>
 </html>
